--- a/templates/account/reset_password.html
+++ b/templates/account/reset_password.html
@@ -9,14 +9,14 @@
         </div>
         <form  class="col-md-5  container mt-2 mb-4 p-0" method="post">
             <div class="col-12 mb-2 text-center  p-1">  
-                <span class="form-group h3"  style="font-weight: 600;">{% trans "Reset by email" %} </span>
+                <span class="form-group h3"  style="font-weight: 600;">{% trans "Réinitialiser par email" %} </span>
             </div>
             <div class="col-12">
                 {% include 'partials/_alerts.html' %}
                 {% csrf_token %}
                 <div class="col-12">
                     {{form.email|as_crispy_field}}
-                    <button type="submit" class="btn btn-primary">{% trans "send" %} </button>
+                    <button type="submit" class="btn btn-primary">{% trans "envoyer" %} </button>
                 </div>
                 
             </div><br>
