--- a/templates/account/reset_password_form.html
+++ b/templates/account/reset_password_form.html
@@ -16,7 +16,7 @@
                 {% csrf_token %}
                 <div class="col-12">
                     {{form|crispy}}
-                    <button type="submit" class="btn btn-primary">{% trans "send" %} </button>
+                    <button type="submit" class="btn btn-primary">{% trans "envoyer" %} </button>
                 </div>
                 
             </div><br>
