--- a/templates/partials/_alerts.html
+++ b/templates/partials/_alerts.html
@@ -10,7 +10,7 @@
                         </span>
                     </button>
                     <strong>
-                        {% trans "Error:" %}
+                        {% trans "Erreur:" %}
                     </strong>
                     {{ message }}
                 </div>
