--- a/templates/partials/_auth_ok.html
+++ b/templates/partials/_auth_ok.html
@@ -2,6 +2,6 @@
 <div class=" jumbotron-fluid">
     <div class="container text-center">
       <p class="fa fa-check-circle  " style="font-size: 5.5rem;color:#28a745;"></p>
-      <h1>{% trans "Connected !" %}</h1> 
+      <h1>{% trans "Connecté !" %}</h1> 
       </div>
 </div>
