--- a/templates/account/change_password.html
+++ b/templates/account/change_password.html
@@ -9,14 +9,14 @@
         </div>
         <form  class="col-md-5  container mt-2 mb-4 p-0" method="post">
             <div class="col-12 mb-2 text-center  p-1">  
-                <span class="form-group h3"  style="font-weight: 600;">{% trans "Enter New Password" %} </span>
+                <span class="form-group h3"  style="font-weight: 600;">{% trans "Entrez un nouveau mot de passe" %} </span>
             </div>
             <div class="col-12">
                 {% include 'partials/_alerts.html' %}
                 {% csrf_token %}
                 <div class="col-12">
                     {{form|crispy}}
-                    <button type="submit" class="btn btn-primary">{% trans "send" %} </button>
+                    <button type="submit" class="btn btn-primary">{% trans "envoyer" %} </button>
                 </div>
                 
             </div><br>
