--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="row">
                 <div class=" col-md-3 col-12   text-center "  >
-                    <img class="rounded-circle border " src="{% if user.photo %}/media/{{user.photo}}{% else %}{% static "img/user.png" %}{% endif %}"  alt="Profil" style="width:150px;height:150px" >
+                    <img class="rounded-circle border " src="{% if user.photo %}/media/{{user.photo}}{% else %}{% static 'img/user.png' %}{% endif %}"  alt="Profil" style="width:150px;height:150px" >
                 </div>
                 <ul class="col-12 col-md-5 nav m-auto">
                     <li class=" col-12 col-md-9 col-sm-12  " >
