--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -16,9 +16,9 @@
         <div class='row'>
             <ul>
                 <ul class="list-unstyled multi-steps">
-                <li>course selection</li>
-                <li class="is-active">enrollement confirmation</li>
-                <li>payement success</li>
+                <li>{% trans 'Selection de cours' %}</li>
+                <li class="is-active">{% trans 'Inscription confirmée' %}</li>
+                <li>{% trans 'paiement avec succès' %}</li>
             </ul>
         </div>
         <div class='row justify-content-center'>
@@ -28,14 +28,14 @@
                     <ul class="list-group">
                         <li class="list-group-item">{{courseDate.date}}</li>
                         <li class="list-group-item"> <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Tutor: " %}</strong>{{courseDate.teacher.get_full_name}}</a></li>
-                        <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}} Enrollement Fee</li>
+                        <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}} {% trans "Frais d'inscription" %}</li>
                     </ul>
                     <div class='row justify-content-center'>
                         {% if enrolled %}
-                            <h2> You already enrolled </h2>
+                            <h2> {% trans 'Vous êtes deja inscrit' %} </h2>
                         {% else %}
                             {% if soldOut %}
-                                <h2> it's sold out </h2>
+                                <h2> it's sold out{% trans '' %} </h2>
                             {% else %}
                                 <a href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
                             {% endif %}
