--- a/templates/courses/payement.html
+++ b/templates/courses/payement.html
@@ -15,10 +15,10 @@
     <div class='container mt-3'>
         <div class='row'>
             <ul class="list-unstyled multi-steps list-group">
-                <li class="list-group-item">course selection</li>
-                <li class="list-group-item"> <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Tutor: " %}</strong>{{courseDate.teacher.get_full_name}}</a></li>
-                <li class="list-group-item">enrollement confirmation</li>
-                <li class="list-group-item is-active">payement success</li>
+                <li class="list-group-item">{% trans 'Selectionnez un cours' %}</li>
+                <li class="list-group-item"> <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Professeur: " %}</strong>{{courseDate.teacher.get_full_name}}</a></li>
+                <li class="list-group-item">{% trans 'Inscription confirmée' %}</li>
+                <li class="list-group-item is-active">{% trans 'paiement avec succès' %}</li>
             </ul>
         </div>
         <div class='row justify-content-center'>
@@ -27,8 +27,8 @@
                     <h3 class='card-title'>{{courseDate.course.title}}</h3>
                     <ul class="list-group">
                         <li class="list-group-item">{{courseDate.date}}</li>
-                        <li class="list-group-item">Tutor {{courseDate.teacher.get_full_name}}</li>
-                        <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}} Enrollement Fee</li>
+                        <li class="list-group-item">{% trans 'Professeur'%} {{courseDate.teacher.get_full_name}}</li>
+                        <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}}{% trans "Frais d'inscription" %}</li>
                     </ul>
                 </div>
             </div>
