--- a/templates/courses/search_results.html
+++ b/templates/courses/search_results.html
@@ -34,7 +34,7 @@
             {% endfor %}
         {% else %}
             <div>
-                <h3 class='text-muted'>no result found ...</h3>
+                <h3 class='text-muted'>{% trans 'pas de resultat ...' %}</h3>
             </div>
         {% endif %}
     </div>
