--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -17,15 +17,15 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="{% url 'home' %}">Home</a></li>
-              <li><a href="{% url 'about' %}">About us</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="{% url 'home' %}">{% trans 'Acceuil' %}</a></li>
+              <li><a href="{% url 'about' %}">{% trans 'À propos' %}</a></li>
+              <li><a href="#">{% trans "Conditions d'utilisation" %}</a></li>
+              <li><a href="#">{% trans 'Politique de confidentialité' %}</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h4>{% trans 'Contactez-nous' %}</h4>
             <p>
               2ème Ruelle Nazon<br>
               Port-au-Prince ,Haiti <br>
