--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load i18n %}
+
 <!--Main Navigation-->
 <header>
     <nav class="navbar shadow navbar-expand-lg navbar-dark bg-main p-0">
@@ -10,14 +12,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item {% if request.get_full_path == '/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'home' %}">{% trans 'Acceuil' %} <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item {% if request.get_full_path == '/courses/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'courses_home' %}">Courses</a>
+                        <a class="nav-link" href="{% url 'courses_home' %}">{% trans 'Cours' %}</a>
                     </li>
                     
                     <li class="nav-item {% if request.get_full_path == '/about/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                        <a class="nav-link" href="{% url 'about' %}">{% trans 'À propos' %}</a>
                     </li>
                 </ul>
                 {% if user.is_authenticated %}
