--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -24,7 +24,7 @@
         <div class='row justify-content-center'>
             <div class='card'>
                 <div class='card-body'>
-                        <ul class="list-group">
+                    <ul class="list-group">
                         <li class="list-group-item"><h3 class='card-title'>{{courseDate.course.title}}</h3></li>
                         <li class="list-group-item">{{courseDate.date}}</li>
                         <li class="list-group-item"> <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Tutor: " %}</strong>{{courseDate.teacher.get_full_name}}</a></li>
@@ -38,12 +38,22 @@
                                 <h2> {% trans "it's sold out" %} </h2>
                             {% else %}
                                 <div class="card col-10 p-2  m-4">
-                                    <h3>{% trans "Pay with moncash" %}</h3>
+                                    <h3>{% trans "Pay with Moncash" %}</h3>
                                     <a  href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 ></a><br>
+                                </div>
+                                <div class="card col-10 p-2  m-4">
+                                    <h3>{% trans "Pay with SogePay" %}</h3>
+                                    <ul class="list-group m-2">
+                                        <li class="list-group-item">1- {% trans "clicker sur SogePay" %}</li>
+                                        <li class="list-group-item">2- {% trans "faire le paiement" %}</li>
+                                        <li class="list-group-item">3- {% trans "noter le numero de transaction" %}</li>
+                                        <li class="list-group-item">4- {% trans "attendre quelques heures(3h a 24h) et utiliser comme coupon code" %}</li>
+                                    </ul>
+                                    <a href="https://sogepay.sogebank.com/" ><img src="https://sogepay.sogebank.com/pay/images/sogepay.png" height=44 ></a><br>
                                 </div>
                                 <form class="card col-10 p-2 m-4" method="post" action="{% url 'coupon_payement' %}">
                                 {% csrf_token %}
-                                    <h3>{% trans "Pay with coupon" %}</h3>
+                                    <h3>{% trans "Pay with Coupon" %}</h3>
                                     <input type="hidden" class="form-control" value={{courseDate.id}} name="courseDate_id" id="courseDate_id" placeholder="courseDate id">
                                     <div class="form-group">
                                       <input type="text" class="form-control" name="coupon_code" id="coupon_code" placeholder="code">
