--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -12,7 +12,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item {% if request.get_full_path == '/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'home' %}">{% trans 'Acceuil' %} <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'home' %}">{% trans 'Accueil' %} <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item {% if request.get_full_path == '/courses/' %}active{% endif %}">
                         <a class="nav-link" href="{% url 'courses_home' %}">{% trans 'Cours' %}</a>
