--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="text-white text-center">
                 <h1 class="font-weight-bold">ESIH Makerlab</h1>
-                <h3>The best place to do it yourself or with others</h3>
+                <h3>Le meilleur endroit pour le faire soi-même ou avec d'autres</h3>
             </div>
         </div>
     </div>
@@ -15,13 +15,14 @@
 <div>
     <div class="container p-5">
         <div class="text-center">
-            <h3 class="font-weight-bold">What is a makerlab ?</h3>
-            <p>The MakerSpaces serve as a meeting point where communities 
-                of Makers (creators) connect to work on real and personally
-                meaningful projects, advised by helpful experienced mentors, 
-                making use of new technologies and traditional tools. They can 
-                be found in different shapes and sizes, but all of them are 
-                characterized by what they allow us to do.
+            <h3 class="font-weight-bold">C'est quoi un makerlab ?</h3>
+            <p>
+                Les MakerSpaces servent de point de rencontre où les communautés
+                des Makers (créateurs) se connectent pour travailler sur des
+                projets significatifs, conseillés par des mentors expérimentés et utiles,
+                en utilisant les nouvelles technologies et les outils traditionnels. Ils peuvent
+                être trouvés dans différentes formes et tailles, mais tous sont
+                caractérisés par ce qu'ils nous permettent de faire.
             </p>
         </div>
     </div>
@@ -29,21 +30,21 @@
 <div class="bg-secondary p-5">
     <div class="container">
         <div class="row justify-content-center">
-            <h3 class="text-white font-weight-bold">Our main focus</h3>
+            <h3 class="text-white font-weight-bold">Centres d'intérêts</h3>
         </div>
         <div class="d-flex flex-row justify-content-around">
             <div class="row mt-5">
                 <div class="col-12 col-md-4">
                     <img src="{% static 'img/register.svg' %}" class="col-12" alt="" height="100px">
-                    <h2 class="text-center text-white">Learn</h2>
+                    <h2 class="text-center text-white">Apprendre</h2>
                 </div>
                 <div class="col-12  col-md-4">
                     <img src="{% static 'img/login.svg' %}" class="col-12" alt="" height="100px">
-                    <h2 class="text-center text-white">Projects</h2>
+                    <h2 class="text-center text-white">Projets</h2>
                 </div>
                 <div class="col-12  col-md-4">
                     <img src="{% static 'img/3d.svg' %}" class="col-12" alt="" height="100px">
-                    <h2 class="text-center text-white">Peoples</h2>
+                    <h2 class="text-center text-white">Communautés</h2>
                 </div>
             </div>
         </div>
