add google form

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -45,7 +45,7 @@
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>{% trans 'Assistez à un atelier sur' %} <span id='typed'></span></h2>
                 <h4 class='text-muted'>{% trans 'Rejoignez de grands esprits sur de beaux sujets' %}</h4>
-                <a href="{% url 'courses_home' %}" class='btn btn-dark btn-lg'>{% trans 'Rejoignez-nous' %}</a>
+                <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Rejoignez-nous' %}</a>
             </div>
         </div>
     </div>
