--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -45,7 +45,7 @@
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>{% trans 'Assistez à un atelier sur' %} <span id='typed'></span></h2>
                 <h4 class='text-muted'>{% trans 'Rejoignez de grands esprits sur de beaux sujets' %}</h4>
-                <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Rejoignez-nous' %}</a>
+                <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Posez votre candidature' %}</a>
             </div>
         </div>
     </div>
@@ -55,14 +55,12 @@
  {% block last_content %}
     {{block.super}}
      <div id='typed-strings'>
-        <p>microcontrollers</p>
-        <p>pcb design</p>
+        <p>Microcontrollers</p>
+        <p>PCB design</p>
         <p>C++ programming<p>
+        <p>Python programming<p>
         <p>3D printing</p>
-        <p>latex</p>
-        <p>CAD<p>
-        <p>soldering<p>
-        <p>robotics<p>
+        <p>Robotics<p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
