--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -29,7 +29,7 @@
             <p>
               2ème Ruelle Nazon<br>
               Port-au-Prince ,Haïti <br>
-              <strong>Téléphone:</strong> +509 48 43 83 40<br>
+              <strong>Téléphone:</strong>+50932092009<br>
               {% comment %} <strong>Email:</strong> <br> {% endcomment %}
             </p>
 
@@ -64,7 +64,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; {% trans 'TOUS DROITS RÉSERVÉS©'%} <strong><span>ESIH Makerlab</span></strong>. 2021
+        &copy; makerlab.esih.edu {% trans 'TOUS DROITS RÉSERVÉS©'%} <strong><span>ESIH Makerlab</span></strong>. 2022
       </div>
     </div>
   </footer><!-- End Footer -->
