--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -45,13 +45,8 @@
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>{% trans 'Assistez à un atelier sur' %} <span id='typed'></span></h2>
                 <h4 class='text-muted'>
-                    {% trans 'Le MakerLab de l'ESIH sous l'égide de HaitiBot lance un appel à candidatures pour
-                    renforcer et compléter le comité de
-                    gestion dudit laboratoire, afin de mieux structurer ce dernier et de continuer à poursuivre
-                    l'objectif et la vision du
-                    MakerLab qui est la création de (matériels, logiciels) informatiques,électroniques et l'innovation
-                    technologique.' %}
-                    <div>{% trans 'Rejoinez-nous en cliquant sur ce bouton:' %}</div>
+                    {% trans 'Le MakerLab de l'ESIH sous l'égide de HaitiBot lance un appel à candidatures pour renforcer et compléter le comité de gestion dudit laboratoire, afin de mieux structurer ce dernier et de continuer à poursuivre l'objectif et la vision du MakerLab qui est la création de (matériels, logiciels) informatiques,électroniques et l'innovation technologique.' %}
+                    <div class="text-body">{% trans 'Rejoinez-nous en cliquant sur ce bouton:' %}</div>
                 </h4>
                 <a href="https://forms.gle/nQaLtF9Viu2eAvaN7" class='btn btn-dark btn-lg'>{% trans 'Posez votre candidature' %}</a>
             </div>
