--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -50,4 +50,50 @@
         </div>
     </div>
 </div>
+{% comment %}
+<div class="container text-center mt-5 mb-2">
+    <h1 class="mb-0">Meet our agents</h1>
+    <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span>
+</div>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/uppKNuF.jpg" width="90">
+                <h5 class="mt-3 name">Samuel Plamer</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
+                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
+                <div class="mt-4">
+                    <h6 class="v-profile">View Profile</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/oJmLthK.jpg" width="90">
+                <h5 class="mt-3 name">Nancy Markus</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
+                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
+                <div class="mt-4">
+                    <h6 class="v-profile">View Profile</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/HFpxxJz.jpg" width="90">
+                <h5 class="mt-3 name">Martha Col</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
+                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
+                <div class="mt-4">
+                    <h6 class="v-profile">View Profile</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/MZm1LNz.jpg" width="90">
+                <h5 class="mt-3 name">Marry Jones</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
+                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
+                <div class="mt-4">
+                    <h6 class="v-profile">View Profile</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endcomment %}
 {% endblock content %}
