--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -3,7 +3,7 @@
 
 <!--Main Navigation-->
 <header>
-    <nav class="navbar shadow navbar-expand-lg navbar-light bg-main p-0">
+    <nav class="navbar shadow navbar-expand-lg navbar-light bg-white bg-main p-0">
         <div class="container p-1">
             <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/logo.jpg' %}" height="52px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
